[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.8.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { version = "24", default-features = false, features = ["wgsl"] }
etagere = "0.2.10"
cosmic-text = "0.14"
lru = { version = "0.12.1", default-features = false }
rustc-hash = "2.0"

[dev-dependencies]
winit = "0.30.3"
wgpu = "24"
resvg = { version = "0.44", default-features = false }
pollster = "0.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prepare"
harness = false
